added axum usage example
Signed-off-by: Aleksandr Sokolovskii <amsokol+github@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["attribute-macros", "attribute-macros-usage"]
+members = ["attribute-macros", "attribute-macros-usage", "axum-usage"]
