added type name and size example
Signed-off-by: Aleksandr Sokolovskii <amsokol+github@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,7 @@
 [workspace]
-members = ["attribute-macros", "attribute-macros-usage", "axum-usage"]
+members = [
+    "attribute-macros",
+    "attribute-macros-usage",
+    "axum-usage",
+    "type-name-size",
+]
